# ml_ds_review

./: .gitignore  pyproject.toml
notebooks/: chapter_2_housing.ipynb
scripts/: prefetch_datasets.py
